# cmakeQtTest

./: README.md
01 root dir/: CMakeLists.txt  README.md
01 root dir/a/: CMakeLists.txt  a.cpp
01 root dir/a/b/: b.cpp
01 root dir/test/: CMakeLists.txt  mainwindow.cpp
02 make dll/: README.md
02 make dll/a/: CMakeLists.txt  a.cpp
02 make dll/test/: CMakeLists.txt  mainwindow.cpp
